# FileConvert

./: CMakeLists.txt  README.md  mapd.thrift
Catalog/: CMakeLists.txt  Catalog.cpp  Catalog.h  TODO.txt
DataMgr/: CMakeLists.txt  DataMgr.cpp  DataMgr.h  TODO.txt
DelimitedImporter/: CMakeLists.txt  DelimitedImporter.cpp  DelimitedImporter.h
DelimitedWriter/: CMakeLists.txt  DelimitedWriter.cpp  DelimitedWriter.h
FileConvert/: CMakeLists.txt  FileConvert.cpp  StringUtil.h
GDALImporter/: CMakeLists.txt  GDALImporter.cpp  GDALImporter.h
Import/: ArrowSupport.cpp  ArrowSupport.h  ArrowTemplates.h  CMakeLists.txt  CopyParams.h  DataGen.cpp  DataGen.h  DelimitedSupport.cpp  DelimitedSupport.h  Detector.cpp  Detector.h  Importer.cpp  Importer.h  TypedImportBuffer.cpp  TypedImportBuffer.h
MapDImporter/: CMakeLists.txt  MapDImporter.cpp  MapDImporter.h
MapDWriter/: CMakeLists.txt  MapDWriter.cpp  MapDWriter.h  TODO.txt
ParquetImporter/: CMakeLists.txt  ParquetImporter.cpp  ParquetImporter.h
ParquetWriter/: CMakeLists.txt  ParquetWriter.cpp  ParquetWriter.h
QueryEngine/: CMakeLists.txt
Shared/: CMakeLists.txt  Datum.cpp  HalfFloat.cpp  HalfFloat.h  SanitizeName.cpp  SanitizeName.h  TODO.txt  sqltypes.h
StringDictionary/: CMakeLists.txt  StringDictionary.cpp  StringDictionary.h
build-support/: run-infer.sh
cmake/Modules/: FindArrow.cmake  FindClangTools.cmake  TODO.txt
examples/: README.txt
